--- a/src/JPE_JPI_Map.Rmd
+++ b/src/JPE_JPI_Map.Rmd
@@ -12,9 +12,8 @@ Packages
 - [leaflet & tmap bookdown](https://bookdown.org/robinlovelace/geocompr/adv-map.html#interactive-maps)
 - 
 ```{r}
-
-
-
+install.packages("rnaturalearth")
+library(rnaturalearth)
 library(leaflet)
 library(tmap)
 library(rbokeh)
@@ -27,8 +26,39 @@ library(tidyverse)
 Rnaturalearth
 ```{r}
 library(sf)
-world <- ne_states( returnclass = "sf")
+vignette("rnaturalearth", package = "rnaturalearth")
+vignette("what-is-a-country", package = "rnaturalearth")
+
+US <- ne_states(country = "United States of America", returnclass = "sf")
+?ne_states()
+
+sp::plot(ne_states(country = "United States of America", returnclass = "sf"))
+
 rivers50 <- ne_download( scale = 10, type = 'rivers_lake_centerlines', category = 'physical',  returnclass = "sf") 
+
+
+
+#river data
+# lakes
+lakes110 <- ne_download(scale = 110, type = "lakes", category = "physical")
+sp::plot(lakes110)
+
+# rivers
+rivers10 <- ne_download(
+  scale = 10,
+  type = "rivers_lake_centerlines",
+  category = "physical",
+  returnclass = "sf"
+)
+
+library(ggplot2)
+library(sf)
+
+ggplot(rivers50) +
+  geom_sf() +
+  theme_minimal()
+
+
 
 ca_cropped <- st_crop(world, xmin = -100, xmax =-140,
                         ymin = 20, ymax = 50) #cropping map
